--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "body-parser": "^1.17.1",
+    "cors": "^2.8.2",
+    "express": "^4.15.2",
+    "morgan": "^1.8.1",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
