--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "babel-preset-react": "^6.23.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "morgan": "^1.8.1",
     "path": "^0.12.7",
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "sequelize": "^3.30.4",
     "webpack": "^2.3.2"
   },
   "devDependencies": {
