--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "fs": "0.0.1-security",
     "morgan": "^1.8.1",
     "path": "^0.12.7",
     "pg": "^6.1.5",
