--- a/package.json
+++ b/package.json
@@ -28,11 +28,8 @@
     "pg-hstore": "^2.3.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
-    "redux": "^3.6.0",
-    "redux-logger": "^3.0.1",
-    "redux-thunk": "^2.2.0",
+    "react-select": "^1.0.0-rc.3",
     "sequelize": "^3.30.4",
     "webpack": "^2.3.2"
   },
