--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "fs": "0.0.1-security",
+    "log4js": "^1.1.1",
     "morgan": "^1.8.1",
     "path": "^0.12.7",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
     "react-select": "^1.0.0-rc.3",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.4",
     "webpack": "^2.3.2"
   },
