--- a/package.json
+++ b/package.json
@@ -18,19 +18,23 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "body-parser": "^1.17.1",
+    "chai": "^3.5.0",
     "cors": "^2.8.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "fs": "0.0.1-security",
     "log4js": "^1.1.1",
+    "mocha": "^3.2.0",
     "morgan": "^1.8.1",
     "path": "^0.12.7",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.5.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
