--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^7.3.0",
     "log4js": "^1.1.1",
     "mocha": "^3.2.0",
     "moment": "^2.18.1",
