--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.15.2",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^7.3.0",
+    "less-loader": "^4.0.3",
     "log4js": "^1.1.1",
     "mocha": "^3.2.0",
     "moment": "^2.18.1",
@@ -40,6 +41,7 @@
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-select": "^1.0.0-rc.3",
+    "react-widgets": "^3.4.6",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
