--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "cors": "^2.8.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "file-loader": "^0.11.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^7.3.0",
+    "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "log4js": "^1.1.1",
     "mocha": "^3.2.0",
@@ -43,9 +45,11 @@
     "react-select": "^1.0.0-rc.3",
     "react-widgets": "^3.4.6",
     "redux": "^3.6.0",
+    "redux-form": "^6.6.3",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.4",
+    "url-loader": "^0.5.8",
     "webpack": "^2.3.2"
   },
   "devDependencies": {
