--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.6",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.9",
     "react-datepicker": "^0.44.0",
     "react-day-picker": "^5.2.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
+    "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.0.0",
     "react-select": "^1.0.0-rc.3",
     "react-widgets": "^3.4.6",
